--- a/index.html
+++ b/index.html
@@ -2140,11 +2140,11 @@ async function startAvalanche() {
       <p>But here’s the truth:</p>
 <br>
       <ul>
-        <li>✔️ Nobody does <strong>Proof-Before-Action</strong></li>
-        <li>✔️ Nobody binds <strong>input → rule → output</strong> cryptographically</li>
-        <li>✔️ Nobody performs <strong>local, real-time integrity verification</strong></li>
-        <li>✔️ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong></li>
-        <li>✔️ Nobody provides <strong>cryptographic receipts before harm occurs</strong></li>
+✔️ Nobody does <strong>Proof-Before-Action</strong></li>
+✔️ Nobody binds <strong>input → rule → output</strong> cryptographically
+✔️ Nobody performs <strong>local, real-time integrity verification</strong>
+✔️ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong>
+✔️ Nobody provides <strong>cryptographic receipts before harm occurs</strong>
       </ul>
 <br>
       <p>
