--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@ html[data-theme="dark"] .aud-btn.active {
   <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
 
     <h2 style="margin-top:0;">What NOVAK Does — In Plain English</h2>
-
+<br>
     <p><strong>NOVAK prevents computers from acting on wrong information.</strong></p>
-
+<br>
     <p>
       Before any automated system — VA claims, AI, robots, finance, healthcare —
       is allowed to <em>make a decision</em>, NOVAK forces it to prove:
@@ -2747,7 +2747,8 @@ Use this hash in NOVAK EIR / HVET to bind audio integrity.`;
   NOVAK Protocol<br>
   Novak Objective Verification of Autonomous Knowledge<br>
   Proof-Before-Action<br>
-  Patent Pending — Copyright © 2025 Matthew Novak<br><br>
+  Patent Pending<br>
+  Copyright © 2025 Matthew Novak<br><br>
 
   PADI 30-Year Member IDC Staff Instructor #888850 —
   <a href="https://www.padi.com" target="_blank" rel="noopener noreferrer">www.padi.com</a><br>
@@ -2767,7 +2768,7 @@ Use this hash in NOVAK EIR / HVET to bind audio integrity.`;
 </p>
 
   <br>
-  Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br>
+  Nothing stored, logged, transmitted, analyzed, monitored, sold, or shared.<br><br>
   100% local, private, client-side cryptographic verification.
 </footer>
 
