--- a/index.html
+++ b/index.html
@@ -1678,6 +1678,8 @@ async function updateHashes() {
   // OUTPUT HASHES
   output.innerHTML = html;
 
+  output.innerHTML = html;
+
   // =============================================================
   // STORE HASHES FOR RECEIPT + JSON + QR
   // =============================================================
@@ -1695,7 +1697,7 @@ async function updateHashes() {
   if (document.getElementById("autoVerifyToggle").checked) {
     updateAutoVerify();
   }
-}
+
 
 /* ========================================================= */
 /* MODE 2 — DIGEST VIEWER                                    */
