--- a/index.html
+++ b/index.html
@@ -2043,10 +2043,10 @@ async function startAvalanche() {
 
     <div style="margin-top:16px; font-size:15px; line-height:1.55;">
 
-      <h4>Are These Real Cryptographic Hashes?</h4>
+      <h4>Are These Real Cryptographic Hashes?</h4><br>
 
       <p><strong>✔ YES.</strong> Your browser is using the 
-      <strong>WebCrypto API</strong> — the same cryptographic engine used by:</p>
+      <strong>WebCrypto API</strong> — the same cryptographic engine used by:</p><br>
 
       <ul>
         <li>Google Chrome internal security modules</li>
@@ -2060,20 +2060,20 @@ async function startAvalanche() {
         Everything runs <strong>locally, client-side, instantly</strong>.
       </p>
 
-      <h4 style="margin-top:16px;">Why Isn’t My GPU Being Used?</h4>
+      <h4 style="margin-top:16px;">Why Isn’t My GPU Being Used?</h4><br>
 
       <ul>
         <li>✔ GPUs are not used for SHA-256/384/512 because hashing is not a parallel-friendly operation.</li>
         <li>✔ The browser delegates hashing to <strong>CPU hardware acceleration</strong>, not your graphics card.</li>
       </ul>
 
-      <h4>Hashing uses:</h4>
+      <h4>Hashing uses:</h4><br>
 
       <ul>
         <li>✔ CPU</li>
         <li>✔ Hardware-accelerated WebCrypto</li>
       </ul>
-
+<br>
       <p><strong>NOT GPU compute.</strong></p>
 
       <p>
