--- a/index.html
+++ b/index.html
@@ -2103,18 +2103,19 @@ async function startAvalanche() {
       </p>
 <br>
       <ul>
-        <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li>
-        <li>🔐 TLS/SSL protects communication — <strong>not</strong> decision integrity</li>
-        <li>⛓ Blockchain records history — it cannot stop bad actions</li>
-        <li>📘 Logging documents failure — it does not prevent it</li>
+        <li>✅ Hashing proves data hasn't changed — <strong>after</strong> execution</li><br>
+        <li>🔐 TLS/SSL protects communication — <strong>not</strong> decision integrity</li><br>
+        <li>⛓ Blockchain records history — it cannot stop bad actions</li><br>
+        <li>📘 Logging documents failure — it does not prevent it</li><br>
         <li>🧍 Audits require humans — long after harm already occurred</li>
       </ul>
 
       <h4 style="margin-top:18px;">NOVAK is different:</h4>
       <ul>
-        <li>🚫 <strong>No cryptographic proof → system is blocked</strong></li>
-        <li>🌟 <strong>Input, rule & output must cryptographically match</strong></li>
-        <li>🛡 <strong>Prevents fraud, corruption, glitches & silent automation failure</strong></li>
+        <br>
+        <li>🚫 <strong>No cryptographic proof → system is blocked</strong></li><br>
+        <li>🌟 <strong>Input, rule & output must cryptographically match</strong></li><br>
+        <li>🛡 <strong>Prevents fraud, corruption, glitches & silent automation failure</strong></li><br>
         <li>📜 <strong>Generates tamper-proof execution receipts instantly</strong></li>
       </ul>
 
