--- a/index.html
+++ b/index.html
@@ -2143,10 +2143,10 @@ async function startAvalanche() {
       <p>But here’s the truth:</p>
 <br>
       <ul>
-✔️ Nobody does <strong>Proof-Before-Action</strong></li>
-✔️ Nobody binds <strong>input → rule → output</strong> cryptographically
-✔️ Nobody performs <strong>local, real-time integrity verification</strong>
-✔️ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong>
+✔️ Nobody does <strong>Proof-Before-Action</strong></li><br>
+✔️ Nobody binds <strong>input → rule → output</strong> cryptographically<br>
+✔️ Nobody performs <strong>local, real-time integrity verification</strong><br>
+✔️ Nobody applies this to <strong>AI, robotics, finance, VA claims, or government systems</strong><br>
 ✔️ Nobody provides <strong>cryptographic receipts before harm occurs</strong>
       </ul>
 <br>
