--- a/index.html
+++ b/index.html
@@ -2239,9 +2239,10 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
       <p>
         Packet sniffing can:
         <ul>
+          <br>
           <li>See what was sent</li>
           <li>See what was received</li>
-          <li>Watch the communication happen</li>
+          <li>Watch the communication happen</li><br>
         </ul>
       </p>
 
@@ -2276,7 +2277,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
         <li>They cannot fake an EIR — receipt won't match</li>
         <li>They cannot inject modified output — Safety Gate rejects it</li>
         <li>They cannot MITM the rule → output → receipt chain</li>
-        <li>They cannot drift the content — auto-verification catches it</li>
+        <li>They cannot drift the content — auto-verification catches it</li><br>
       </ul>
 
       <p>
@@ -2313,7 +2314,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 
       <p>
         Traditional systems break when sniffed because they rely on secrecy.
-        <br>
+        <br><br>
         NOVAK doesn't rely on secrecy — it relies on <strong>mathematical correctness</strong>.
       </p>
 
