--- a/index.html
+++ b/index.html
@@ -2116,7 +2116,7 @@ async function startAvalanche() {
         <li>🚫 <strong>No cryptographic proof → system is blocked</strong></li><br>
         <li>🌟 <strong>Input, rule & output must cryptographically match</strong></li><br>
         <li>🛡 <strong>Prevents fraud, corruption, glitches & silent automation failure</strong></li><br>
-        <li>📜 <strong>Generates tamper-proof execution receipts instantly</strong></li>
+        <li>📜 <strong>Generates tamper-proof execution receipts instantly</strong></li><br>
       </ul>
 
       <p>
