--- a/index.html
+++ b/index.html
@@ -2134,7 +2134,6 @@ async function startAvalanche() {
   </details>
 </div>
 
-
 <!-- ====================================================== -->
 <!-- COLLAPSIBLE: HOW IS THIS DIFFERENT THAN TODAY?         -->
 <!-- ====================================================== -->
@@ -2374,7 +2373,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
     </div>
   </details>
 
-  <!-- XOmmented this out </div>
+</div>
 
 <!-- ✅ TRANSPARENCY PANEL -->
 <div class="card"
