--- a/index.html
+++ b/index.html
@@ -2215,23 +2215,24 @@ async function startAvalanche() {
 </div>
 
 <!-- ====================================================== -->
-<!-- ⭐ NOVAK SELF-VERIFICATION BLOCK -->
+<!-- ⭐ NOVAK SELF-VERIFICATION BLOCK (FIXED WRAPPER) -->
 <!-- ====================================================== -->
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
-    🔍 Verify NOVAK Itself (Source, Laws, Version, Hashes)
-  </summary>
+<div class="card" style="margin-top:32px; padding:20px;">
+  <details>
+    <summary style="cursor:pointer; font-size:20px; font-weight:600;">
+      🔍 Verify NOVAK Itself (Source, Laws, Version, Hashes)
+    </summary>
 
-  <div class="card" style="padding:28px; margin-top:16px; font-size:16px;">
+    <div style="margin-top:16px; font-size:16px; line-height:1.6;">
 
-    <h2 style="margin-top:0;">NOVAK Self-Verification</h2>
+      <h2 style="margin-top:0;">NOVAK Self-Verification</h2>
 
-    <p>
-      NOVAK practices what it enforces:  
-      <strong>we verify ourselves using our own rules.</strong>
-    </p>
+      <p>
+        NOVAK practices what it enforces:  
+        <strong>we verify ourselves using our own rules.</strong>
+      </p>
 
-    <pre class="diagram-box" style="white-space:pre; font-size:14px;">
+<pre class="diagram-box" style="white-space:pre; font-size:14px;">
 NOVAK Version:     1.0.0
 Laws Included:     L0–L15 + PL-X + PS-X
 Protocol Modules:  HVET + EIR + RGAC + Safety Gate
@@ -2240,26 +2241,27 @@ SHA-256 (source):  <span id="novakSourceHash">[computed live]</span>
 SHA-256 (laws):    <span id="novakLawsHash">[computed live]</span>
 SHA-256 (UI):      <span id="novakUIHash">[computed live]</span>
 Timestamp:         <span id="novakTimestamp">[local time]</span>
-    </pre>
+</pre>
 
-    <p>
-      This block demonstrates that NOVAK uses its own cryptographic process  
-      to guarantee the authenticity of:
-    </p>
+      <p>
+        This block demonstrates that NOVAK uses its own cryptographic process  
+        to guarantee the authenticity of:
+      </p>
 
-    <ul style="margin-left:20px;">
-      <li>✔ The Laws</li>
-      <li>✔ The Protocol definitions</li>
-      <li>✔ The user interface used to verify data</li>
-      <li>✔ The entire educational suite</li>
-    </ul>
+      <ul style="margin-left:20px;">
+        <li>✔ The Laws</li>
+        <li>✔ The Protocol definitions</li>
+        <li>✔ The user interface used to verify data</li>
+        <li>✔ The entire educational suite</li>
+      </ul>
 
-    <p style="margin-top:18px; font-weight:600;">
-      When even the protocol verifies itself — trust becomes mathematical.
-    </p>
+      <p style="margin-top:18px; font-weight:600;">
+        When even the protocol verifies itself — trust becomes mathematical.
+      </p>
 
-  </div>
-</details>
+    </div>
+  </details>
+</div>
 
 <!-- ========================================= -->
 <!-- 💻 HOW NOVAK SURVIVES PACKET SNIFFING     -->
