--- a/index.html
+++ b/index.html
@@ -596,54 +596,54 @@ html[data-theme="dark"] .aud-btn.active {
   <button class="theme-toggle" onclick="toggleTheme()">Light/Dark Mode</button>
 </div>
 
-  <!-- ====================================================== -->
-<!-- ⭐ 60-SECOND NOVAK OVERVIEW — COLLAPSIBLE -->
-<!-- ====================================================== -->
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
-    ⏱️ 60-Second NOVAK Overview (For Everyone)
-  </summary>
-
-  <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
-
-    <h2 style="margin-top:0;">What NOVAK Does — In Plain English</h2>
-<br>
-    <p><strong>NOVAK prevents computers from acting on wrong information.</strong></p>
-<br>
-    <p>
-      Before any automated system — VA claims, AI, robots, finance, healthcare —
-      is allowed to <em>make a decision</em>, NOVAK forces it to prove:
-    </p>
-
-    <ul style="margin-left:20px;">
-      <li>✔ The <strong>input</strong> is unchanged</li>
-      <li>✔ The <strong>rule</strong> used is correct</li>
-      <li>✔ The <strong>output</strong> matches that rule</li>
-      <li>✔ Nothing was silently altered, corrupted, or tampered with</li>
-    </ul>
-
-    <p style="margin-top:18px;">
-      NOVAK is the world’s first <strong>proof-before-action</strong> system.
-    </p>
-
-    <h3 style="margin-top:26px;">Why It Matters</h3>
-    <ul style="margin-left:20px;">
-      <li>✔ Stops fraud before it happens</li>
-      <li>✔ Stops automation errors before harm occurs</li>
-      <li>✔ Blocks corrupted data from executing</li>
-      <li>✔ Makes government systems provable and traceable</li>
-      <li>✔ Works in real time, locally, without blockchain</li>
-    </ul>
-
-    <p style="margin-top:22px; font-weight:600;">
-      NOVAK is the safety layer automation should have had for 50 years.
-    </p>
-
-  </div>
-</details>
-
 <!-- ✅ MAIN CONTENT START -->
 <div class="container">
+
+  <!-- ====================================================== -->
+  <!-- ⭐ 60-SECOND NOVAK OVERVIEW — COLLAPSIBLE -->
+  <!-- ====================================================== -->
+  <details class="novak-collapse" style="margin-top:32px;">
+    <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+      ⏱️ 60-Second NOVAK Overview (For Everyone)
+    </summary>
+
+    <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
+
+      <h2 style="margin-top:0;">What NOVAK Does — In Plain English</h2>
+      <br>
+      <p><strong>NOVAK prevents computers from acting on wrong information.</strong></p>
+      <br>
+      <p>
+        Before any automated system — VA claims, AI, robots, finance, healthcare —
+        is allowed to <em>make a decision</em>, NOVAK forces it to prove:
+      </p>
+
+      <ul style="margin-left:20px;">
+        <li>✔ The <strong>input</strong> is unchanged</li>
+        <li>✔ The <strong>rule</strong> used is correct</li>
+        <li>✔ The <strong>output</strong> matches that rule</li>
+        <li>✔ Nothing was silently altered, corrupted, or tampered with</li>
+      </ul>
+
+      <p style="margin-top:18px;">
+        NOVAK is the world’s first <strong>proof-before-action</strong> system.
+      </p>
+
+      <h3 style="margin-top:26px;">Why It Matters</h3>
+      <ul style="margin-left:20px;">
+        <li>✔ Stops fraud before it happens</li>
+        <li>✔ Stops automation errors before harm occurs</li>
+        <li>✔ Blocks corrupted data from executing</li>
+        <li>✔ Makes government systems provable and traceable</li>
+        <li>✔ Works in real time, locally, without blockchain</li>
+      </ul>
+
+      <p style="margin-top:22px; font-weight:600;">
+        NOVAK is the safety layer automation should have had for 50 years.
+      </p>
+
+    </div>
+  </details>
 
   <!-- ================================================================ -->
   <!-- ✅ AUDIENCE SELECTOR + WHY NOVAK + WHAT IS NOVAK SECTION         -->
@@ -3702,6 +3702,8 @@ document.getElementById("autoVerifyToggle").addEventListener("change", toggleAut
 updateHashes();
 
 </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
