--- a/index.html
+++ b/index.html
@@ -3723,8 +3723,8 @@ function setAudience(aud) {
 
   const messages = {
     public: `
-      <h3>What NOVAK Means for the Public</h3>
-      <p>NOVAK prevents computers from acting on wrong or changed information.</p>
+      <h3>What NOVAK Means for the Public</h3><br>
+      <p>NOVAK prevents computers from acting on wrong or changed information.</p><br>
       <ul>
         <li>✔ Protects you from automated errors</li>
         <li>✔ Blocks fraud before it happens</li>
