--- a/index.html
+++ b/index.html
@@ -834,7 +834,8 @@ html[data-theme="dark"] .aud-btn.active {
     <button class="action-btn" onclick="dismissWhatChanges()" style="margin-top:18px;">
       ✅ Got it — Hide
     </button>
-  </div>
+ 
+  <!-- It said this is the entire fix - LOL</div>
 
    <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
@@ -3764,6 +3765,8 @@ function setAudience(aud) {
     setAudience('public');
   });
 </script>
+
+</div> <!-- moved container close: fixes alignment -->
   
 </body>
 </html>
