--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ html[data-theme="dark"] .aud-btn.active {
    <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
     <button class="pill-btn explain-btn" onclick="showExplain('simple')">🤯 I don't get it</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Milkshake Analogy</button>
+    <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Shake Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
     <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Federal Savings</button>
@@ -2965,7 +2965,7 @@ function restoreWhatChangesOnLoad() {
 =============================*/
 const explainTexts = {
   simple: "NOVAK requires proof-before-action — meaning systems must prove correctness before executing, not after failure.",
-  milkshake: "If a milkshake spills, you see it. In digital systems, corruption is invisible — NOVAK makes tampering visible instantly.",
+  milkshake: "If a shake spills, you see it. In digital systems, corruption is invisible — NOVAK makes tampering visible instantly.",
   pencil: "Like coloring with pencils — once marked, you can't erase without evidence. NOVAK ensures all digital changes leave proof.",
   key: "A door key doesn't open every house — NOVAK ensures only correct, verified data can unlock execution.",
   gov: "NOVAK could save billions by preventing improper payments, fraud, and automation mistakes before they occur.",
