--- a/index.html
+++ b/index.html
@@ -835,7 +835,8 @@ html[data-theme="dark"] .aud-btn.active {
       ✅ Got it — Hide
     </button>
  
-  <!-- It said this is the entire fix - LOL</div>
+  <!-- It said this is the entire fix - LOL -->
+</div>
 
    <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
