--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ html[data-theme="dark"] .aud-btn.active {
     </button>
  
   <!-- It said this is the entire fix - LOL -->
-</div>
+</div> <!-- closes WHAT CHANGES WITH NOVAK only -->
 
    <!-- EXPLAINER BUTTONS -->
   <div style="margin-top:26px;" class="pill-row">
@@ -863,10 +863,7 @@ html[data-theme="dark"] .aud-btn.active {
      style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
 </div>
 
-    <!-- ==================remothisE======= -->
-
-<!-- Moved this here -->
-</div>
+</div> <!-- closes STORY PANEL only -->
 
 <!-- =============================================== -->
 <!--  COLLAPSIBLE — ENGINEERS / CRYPTOGRAPHERS AREA -->
