--- a/index.html
+++ b/index.html
@@ -830,29 +830,27 @@ html[data-theme="dark"] .aud-btn.active {
       ✕
     </button>
 
-    <!-- Confirm hide -->
-    <button class="action-btn" onclick="dismissWhatChanges()" style="margin-top:18px;">
-      ✅ Got it — Hide
-    </button>
- 
-  <!-- It said this is the entire fix - LOL -->
+  <!-- Confirm hide -->
+  <button class="action-btn" onclick="dismissWhatChanges()" style="margin-top:18px;">
+    ✅ Got it — Hide
+  </button>
+
 </div> <!-- closes WHAT CHANGES WITH NOVAK only -->
 
-   <!-- EXPLAINER BUTTONS -->
-  <div style="margin-top:26px;" class="pill-row">
-    <button class="pill-btn explain-btn" onclick="showExplain('simple')">🤯 I don't get it</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Shake Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Federal Savings</button>
-    <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ How This Works</button>
-  </div>
-
+<!-- EXPLAINER BUTTONS — MUST STAY INSIDE .container -->
+<div class="pill-row" style="margin-top:26px;">
+  <button class="pill-btn explain-btn" onclick="showExplain('simple')">🤯 I don't get it</button>
+  <button class="pill-btn explain-btn" onclick="showExplain('milkshake')">🥤 Shake Analogy</button>
+  <button class="pill-btn explain-btn" onclick="showExplain('pencil')">🖍️ Pencil Analogy</button>
+  <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
+  <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Federal Savings</button>
+  <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ How This Works</button>
 </div>
-  <!-- ANALOGY OUTPUT -->
-  <div id="explainerOutput" class="card" style="display:none; margin-top:22px;"></div>
 
-   <!-- ==================================================================== -->
+<!-- ANALOGY OUTPUT -->
+<div id="explainerOutput" class="card" style="display:none; margin-top:22px;"></div>
+
+  <!-- ==================================================================== -->
   <!--  END OF PART 1 — NEXT MESSAGE (PART 2) STARTS WITH TRY-IT HASH AREA  -->
   <!-- ==================================================================== -->
 
