--- a/index.html
+++ b/index.html
@@ -845,9 +845,8 @@ html[data-theme="dark"] .aud-btn.active {
   <button class="pill-btn explain-btn" onclick="showExplain('key')">🔑 Key Analogy</button>
   <button class="pill-btn explain-btn" onclick="showExplain('gov')">🏛 Federal Savings</button>
   <button class="pill-btn explain-btn" onclick="showExplain('how')">👁️ How This Works</button>
-</div>
+</div> <!-- closes ONLY the analogy button row -->
 
-<!-- ANALOGY OUTPUT -->
 <div id="explainerOutput" class="card" style="display:none; margin-top:22px;"></div>
 
   <!-- ==================================================================== -->
