--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ html[data-theme="dark"] .aud-btn.active {
      style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
 </div>
 
-</div> <!-- closes STORY PANEL only -->
+<!-- container stays open so Engineers / Test / Datasets stay centered -->
 
 <!-- =============================================== -->
 <!--  COLLAPSIBLE — ENGINEERS / CRYPTOGRAPHERS AREA -->
@@ -1877,7 +1877,7 @@ async function startAvalanche() {
 </div>
   
 <!-- ✅ HASH OUTPUT -->
-<div class="card" style="margin-top:22px;">
+</div> <!-- closes .container -->
   <h3 class="section-title" style="font-size:20px;">Cryptographic Hashes</h3>
 
   <div id="hashOutputList"
