--- a/index.html
+++ b/index.html
@@ -853,18 +853,17 @@ html[data-theme="dark"] .aud-btn.active {
   <!--  END OF PART 1 — NEXT MESSAGE (PART 2) STARTS WITH TRY-IT HASH AREA  -->
   <!-- ==================================================================== -->
 
-    <!-- ==================remothis?======= -->
 <!-- ✅ STORY PANEL -->
 <div id="storyPanel"
      class="card"
      style="display:none; margin-top:20px; font-size:15px; line-height:1.6;">
 </div>
-
-<!-- container stays open so Engineers / Test / Datasets stay centered -->
+<!-- STORY PANEL ends, container stays open -->
 
 <!-- =============================================== -->
 <!--  COLLAPSIBLE — ENGINEERS / CRYPTOGRAPHERS AREA -->
 <!-- =============================================== -->
+
 
 <details class="novak-collapse" style="margin-top:38px;">
   <summary 
