--- a/index.html
+++ b/index.html
@@ -1873,16 +1873,12 @@ async function startAvalanche() {
   NOVAK does not collect, store, transmit, or retain data, but user responsibility applies.
 </p>
 
-</div>
-  
 <!-- ✅ HASH OUTPUT -->
-</div> <!-- closes .container -->
-  <h3 class="section-title" style="font-size:20px;">Cryptographic Hashes</h3>
+<h3 class="section-title" style="font-size:20px; margin-top:24px;">Cryptographic Hashes</h3>
 
-  <div id="hashOutputList"
-       style="margin-top:10px; font-family:'JetBrains Mono', monospace; font-size:14px;">
-    <em>Waiting for input from above...</em>
-  </div>
+<div id="hashOutputList"
+     style="margin-top:10px; font-family:'JetBrains Mono', monospace; font-size:14px;">
+  <em>Waiting for input from above...</em>
 </div>
 
 <!-- =============================================== -->
