--- a/index.html
+++ b/index.html
@@ -2432,7 +2432,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 </details>
 
 <!-- ✅ AI TRANSPARENCY MODE -->
-<div class="card" style="margin-top:32px;" id="transparencyCard">
+<div class="card" style="margin:32px 0 40px 0;" id="transparencyCard">
   <h2 class="section-title">AI Transparency Mode</h2>
 
   <p>
@@ -2445,11 +2445,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
   </button>
 </div>
   
-<!-- ====================================================== -->
-<!-- ⭐ DETERMINISTIC EXECUTION INTEGRITY (COLLAPSIBLE) -->
-<!-- ====================================================== -->
-
-<details class="novak-collapse" style="margin-top:36px;">
+<details class="novak-collapse" style="margin:40px 0;">
   <summary 
     style="
       cursor:pointer; 
@@ -2462,7 +2458,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
     ⚖️ Deterministic Execution Integrity
   </summary>
 
-  <div class="card" style="margin-top:22px; padding:26px; font-size:17px; line-height:1.65;">
+  <div class="card" style="margin-top:18px; padding:26px; font-size:17px; line-height:1.65;">
 
     <h2 style="margin-top:0; font-size:26px;">Deterministic Execution Integrity</h2>
 
